--- a/Dockerfiles/updates/Dockerfile.full
+++ b/Dockerfiles/updates/Dockerfile.full
@@ -1,5 +1,5 @@
-FROM lopsided/archlinux-armv7h:full-currenttar
-LABEL maintainer "ArchLinux Dockerimage Maintainers"
+FROM agners/archlinux-arm32v7:full-currenttar
+LABEL maintainer "ArchLinux ARM Dockerimage Maintainers"
 
 RUN    pacman --noconfirm -Syu \
     && rm -f \
