--- a/manifests/manifest-full.yml
+++ b/manifests/manifest-full.yml
@@ -1,16 +1,7 @@
-image: lopsided/archlinux:full
+image: agners/archlinuxarm:full
 manifests:
-  - image: lopsided/archlinux-armv6h:full
+  - image: agners/archlinuxarm-arm32v7:full
     platform:
       architecture: arm
-      variant: armv6l
-      os: linux
-  - image: lopsided/archlinux-armv7h:full
-    platform:
-      architecture: arm
-      variant: armv7l
-      os: linux
-  - image: archimg/base:full
-    platform:
-      architecture: amd64
+      variant: arm32v7
       os: linux
