--- a/manifests/manifest.yml
+++ b/manifests/manifest.yml
@@ -1,16 +1,7 @@
-image: lopsided/archlinux:latest
+image: agners/archlinuxarm:latest
 manifests:
-  - image: lopsided/archlinux-armv6h:latest
+  - image: agners/archlinuxarm-arm32v7:latest
     platform:
       architecture: arm
-      variant: armv6l
-      os: linux
-  - image: lopsided/archlinux-armv7h:latest
-    platform:
-      architecture: arm
-      variant: armv7l
-      os: linux
-  - image: base/archlinux:latest
-    platform:
-      architecture: amd64
+      variant: arm32v7
       os: linux
