remove existing binfmt setting

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - echo keyserver hkp://pool.sks-keyservers.net  | sudo tee -a /root/.gnupg/gpg.conf
   - echo keyserver-options timeout=10             | sudo tee -a /root/.gnupg/gpg.conf
   - sudo apt-get --yes --no-install-recommends install qemu-user-static
+  - sudo su -c 'echo -1 > /proc/sys/fs/binfmt_misc/qemu-arm'
   - echo ':qemu-arm:M:0:\x7f\x45\x4c\x46\x01\x01\x01\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02\x00\x28\x00:\xff\xff\xff\xff\xff\xff\xff\x00\xff\xff\xff\xff\xff\xff\xff\xff\xfe\xff\xff\xff:/usr/bin/qemu-arm-static:CF' | sudo tee -a /proc/sys/fs/binfmt_misc/register
 script:
   - ./pull || sudo -H ./build
